@@ -1,3 +1,8 @@
+2010-03-18  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* mi/mi-main.c (mi_cmd_list_thread_groups): Use get_current_arch
+	instead of selected frame architecture.
+
 2010-03-17  Tom Tromey  <tromey@redhat.com>
 
 	* linux-nat.c (linux_nat_detach): Check debug_linux_nat.
